# FEATHER

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: artwork_agent_and_deepagents_0_4_plan.md  capability_governance_plan.md  codex_handoff_20260220.md  codex_handoff_20260222.md  codex_handoff_20260223.md  codex_handoff_20260224.md  codex_handoff_20260225.md  codex_handoff_20260226.md  codex_handoff_20260227.md  codex_handoff_20260228.md  codex_resume_guide.md  development_workflow_guide.md  federhav_deepagent_transition_plan.md  federlicht_report.md  federnett_auth_operations.md  federnett_remaining_tasks.md  playwright_mcp_troubleshooting.md  ppt_writer_strategy.md  report_quality_benchmark_prompts_v1.md  report_quality_benchmark_suite_v1.json  report_quality_threshold_policy.md  run_site_publish_strategy.md
examples/: README.md  test_run.py
report_notes_probe_full/: alignment_scout.md  evidence_notes.md
report_notes_probe_full2/: alignment_draft.md  alignment_evidence.md  alignment_final.md  alignment_scout.md  claim_map.md  evidence_notes.md  gap_finder.md  report_workflow.json  report_workflow.md
report_notes_probe_full3/: alignment_draft.md  alignment_evidence.md  alignment_final.md  alignment_scout.md  claim_map.md  evidence_notes.md  gap_finder.md  report_meta.json  report_prompt.txt  report_template.txt  report_workflow.json  report_workflow.md  scout_notes.md
report_notes_probe_scout/: alignment_scout.md  claim_map.md  gap_finder.md
report_notes_tmp_debug2/: claim_map.md  (+3 more)
(+2107 files in other folders)
